Fix control labels mis aligning

--- a/main.css
+++ b/main.css
@@ -36,9 +36,12 @@
 }
 
 [dir] .nx-theme-styles .nx-theme-form .nx-theme-label-1 {
-    text-align: right;
+    text-align: left;
     color: #1B3664;
     font-size: medium;
+    white-space: normal;
+    overflow-wrap: break-word;
+    word-break: normal;
 }
 
 [dir] .nx-theme-styles .nx-theme-form .nx-theme-button-1 {
